[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ballBlue_10.png" type="Texture" id=1]
[ext_resource path="res://Ball.gd" type="Script" id=2]
[ext_resource path="res://assets/Arial.ttf" type="DynamicFontData" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 37.0

[sub_resource type="DynamicFont" id=2]
size = 56
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="CircleShape2D" id=3]
radius = 37.0

[node name="Ball" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_top = -31.5
margin_right = 34.0
margin_bottom = 31.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "60"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BallArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2147483653

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallArea"]
shape = SubResource( 3 )

[node name="DeathTimer" type="Timer" parent="."]
[connection signal="area_entered" from="BallArea" to="." method="hit"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
